Finalize Episteme v1.0.0-beta3.0.14: Enforce NativeSafe abstraction, resolve JDK 21 FFM drift, and stabilize module architecture